--- a/index.html
+++ b/index.html
@@ -150,24 +150,25 @@
     <p>Scopri come i diritti si sono evoluti nel tempo, dalla Magna Carta alla Dichiarazione Universale dei Diritti Umani.</p>
 
     <div class="image-container">
-      <a href="magna_carta.html" class="zoom">
+      <a href="magnacarta.html" class="zoom">
         <img src="img/Magna-Charta-Libertatum-1-2048.jpg" alt="Magna Carta">
       </a>
-      <a href="dichiarazione_1789.html" class="zoom">
+      <a href="1789.html" class="zoom">
         <img src="img/0fb1d404-4e06-465f-8f69-6078a2c97540.jpg" alt="Dichiarazione 1789">
       </a>
-      <a href="dichiarazione_1948.html" class="zoom">
+      <a href="1948.html" class="zoom">
         <img src="img/rooseveltdeclaration0021.jpg" alt="Dichiarazione 1948">
       </a>
     </div>
 
     <div class="links">
-      <a href="magna_carta.html" class="navlink">Magna Carta</a>
-      <a href="dichiarazione_1789.html" class="navlink">Dichiarazione 1789</a>
-      <a href="dichiarazione_1948.html" class="navlink">Dichiarazione 1948</a>
+      <a href="magnacarta.html" class="navlink">Magna Carta</a>
+      <a href="1789.html" class="navlink">Dichiarazione 1789</a>
+      <a href="1948.html" class="navlink">Dichiarazione 1948</a>
     </div>
   </main>
 
   <footer>© 2025 Educazione Civica - Il Sentiero dei Diritti</footer>
 </body>
 </html>
+
